Fix website not displaying on IE 11

--- a/src/layouts/font-face.css
+++ b/src/layouts/font-face.css
@@ -1,17 +1,17 @@
 @font-face {
   font-family: 'IBM Plex Sans';
+  src: url('../fonts/IBMPlexSans-Regular.eot');
   src: url('../fonts/IBMPlexSans-Regular-Latin1.woff2') format('woff2'),
-    url('../fonts/IBMPlexSans-Regular-Latin1.woff') format('woff'),
-    url('../fonts/IBMPlexSans-Regular.eot') format('eot');
+    url('../fonts/IBMPlexSans-Regular-Latin1.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'IBM Plex Sans';
+  src: url('../fonts/IBMPlexSans-SemiBold.eot');  
   src: url('../fonts/IBMPlexSans-SemiBold-Latin1.woff2') format('woff2'),
-    url('../fonts/IBMPlexSans-SemiBold-Latin1.woff') format('woff'),
-    url('../fonts/IBMPlexSans-SemiBold.eot') format('eot');
+    url('../fonts/IBMPlexSans-SemiBold-Latin1.woff') format('woff');
   font-weight: bold;
   font-style: normal;
 }
